--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "homepage": "https://github.com/witseie-elen4010/2021-012-project#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.0.1",
+    "ejs": "^3.1.6",
     "express": "4.17.1",
     "jest": "^27.0.4"
   }
