--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-flash": "0.0.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "jest": "^27.0.4",
     "passport": "^0.4.1",
