--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.17.2",
     "jest": "^27.0.4",
     "method-override": "^3.0.0",
+    "mssql": "7.1.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.1.2"
