--- a/.gitignore
+++ b/.gitignore
@@ -280,6 +280,8 @@ temp/
 
 ### VisualStudioCode ###
 .vscode/*
+.vs_code/
+.vscode
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
