--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,18 @@
 language: node_js 
 node_js:
   - "v14.16.0"
+
 deploy:
   provider: azure_web_apps
   verbose: true
   on:
     branch: main
+
+steps:
+  - task: AzureWebApp@1
+  displayName: Azure App Service Deploy
+  inputs:
+    azureSubscription: 'Azure for Students'
+    appName: 'MyKuduBuddy'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip')'
+    customWebConfig: '-Handler iisnode -NodeStartFile app.js -appType node'
