--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "alert": "^5.0.10",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
