--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
-    "jest": "^27.0.4",
+    "jest": "^27.0.5",
     "method-override": "^3.0.0",
-    "mssql": "7.1.3",
+    "mssql": "^7.1.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.1.2"
