--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "alert": "^5.0.10",
     "bcrypt": "^5.0.1",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.0.2",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
