--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "homepage": "https://github.com/witseie-elen4010/2021-012-project#readme",
   "dependencies": {
+    "alert": "^5.0.10",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.0.1",
+    "confirm-dialog": "^0.1.2",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
