--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "bootstrap": "^5.0.1",
     "confirm-dialog": "^0.1.2",
     "cookie-parser": "^1.4.5",
-    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
@@ -40,5 +39,10 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.1.2"
+  },
+  "_id": "2021-012-project@1.0.0",
+  "devDependencies": {
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.8"
   }
 }
